hphp/test/zend/bad/Zend/tests/bug61087.php
<?php
// the used file is actually irrelevant, so just use this file
// even though it's not an .ini
parse_ini_file(__FILE__, false, 100);
?>